welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:6: error: not found: value estDosAuMur
		while(!estSurBiscuit() && !estDosAuMur())
                                           ^